namespace Infnet.PesqMgm.Domain;

public enum PerfilUsuario
{
    Gestor,
    Respondente
}