namespace Infnet.PesqMgm.Domain;

public enum PesquisaStatus
{
    Rascunho,
    Ativa,
    Concluida,
    Cancelada
}